Made description not required in the story model. Modulated the staging server's site HTML templates. Started recreating the side story panel to look more like daily mail.

--- a/apps/staging/views/blog/index.twig
+++ b/apps/staging/views/blog/index.twig
@@ -132,7 +132,7 @@ h3 a.title:hover, h4 a.title:hover {
 	
 	<div class="text-center" style="margin-top: 25px;">
 		<div class="copyright text-center">
-			<p>Gossip 24/7 &copy; 2016 All rights reserved</p>
+			<p>Gossip 24/7 &copy; {{ currentYear }} All rights reserved</p>
 		</div>
 	</div>
 </div>
