Finished styling the side stories bar. Updated the code for the blog page. Consolidated the inline CSS into a file called custom-site.css Transferred the staging site page files to the live site. Updated the siteConfig model to contain the primary ID's for the staging and production sites.

--- a/apps/production/web/css/style.css
+++ b/apps/production/web/css/style.css
@@ -51,7 +51,7 @@ label{
 /*-----start-header----*/
 .news-paper {
 	background:#fff;
-	padding:1em 1.5em;
+	padding:1em 0;
 	margin:5em 0;
 }
 .header-left {
@@ -454,7 +454,6 @@ a.title {
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 10px;
-	text-transform:lowercase;
 	display:block;
 	text-decoration:none;
 }
